* Split the module into a package. If you have an old version installed
  you'll want to remove it from site-packages.

0.7 (2006-02-10):
=================

* Removed EmPy entirely. While we could still plug something else in
  with not too much hassle, I don't think it's worth keeping if we have
  to work around broken Unicode support.

* Layouts now just print their serialized pages; we capture sys.stdout
  and save it.

0.6 (2006-02-10):
=================

* Added a cache interface so that any different properties that want to
  cache themselves can do so in a consistent way. We may also want to
  save this cache to disk at some point in the futre.

* Added a method to expand Kid templates from your layout instead of
  EmPy. At the moment, both work, but the Kid examples are really clunky
  since they are just a straight port. Instead of building pages in the
  same way, we could make use of Kid's much greater capabilities. I will
  have to consider if EmPy should stay or go first. (Thanks to Erich
  Schubert for the suggestion!)

0.5 (2006-02-08):
=================

* Switch back to ``email`` for parsing messages, so we can support
  encoded messages (quoted-printable, charset RFC 2047 headers, whatever),
  and add a ``charset`` option in the configuration to specify the
  default encoding for data we send to the templates.

* Make ``mime-gpg-decode`` actually decode the message body in the same
  manner, rather than merely pulling the literal signed data out. This
  is not required, but is very convenient if you want to edit messages
  later. This also makes it congruous with ``mimedecode``, which you
  could use on unsigned mail.

* Renamed the EntryMixin interfaces to ``_prop_*`` and ``_init_*``, to
  better reflect what they really mean. In particular, ``_prop_*``
  attributes are now implemented as real properties. This means it is up
  to each method to decide when and how to cache property values.

0.4 (2006-02-04):
=================
