@@ -1,6 +1,6 @@
 title = 'Month %s - %s' % (muse.where[-2], blogname)
 
-body = muse.template('esummary', **locals())
-page = muse.template('xhtml', **locals())
+body = muse.template('esummary', locals())
+page = muse.template('xhtml', locals())
 
-print page.serialize()
+print page
