@@ -2,7 +2,7 @@ title = 'Tag "%s" - %s' % (muse.where[-2], blogname)
 entries = entries[-50:]
 entries.reverse()
 
-body = muse.template('econtent', **locals())
-page = muse.template('xhtml', **locals())
+body = muse.template('econtent', locals())
+page = muse.template('xhtml', locals())
 
-print page.serialize()
+print page
